versão 1 role atualizada