@@ -1,10 +1,12 @@
 package org.app1.treinoauth.Model;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class UserPrincipal implements UserDetails {
     private final UserModel userModel;
@@ -15,7 +17,7 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Sem roles por enquanto
+        return List.of(new SimpleGrantedAuthority(userModel.getRole().name()));
     }
 
     @Override
